--- a/css/style.css
+++ b/css/style.css
@@ -433,6 +433,11 @@ span.date {
     flex-direction: column;
     gap: 1rem;
   }
+
+  .skills-cards {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+  }
 }
 
 .major-projects .h2 {
